🧹refactor(code generation): from fetch to axios
change typescript http library from fetch to axios
