# pkg/api/typescript/example/models/V1ExampleResponse.ts
@@ -1,49 +1,0 @@
-/**
- * Example API
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * OpenAPI spec version: v1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { HttpFile } from '../http/http';
-
-export class V1ExampleResponse {
-    'title'?: string;
-    'description'?: string;
-    'body'?: string;
-
-    static readonly discriminator: string | undefined = undefined;
-
-    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
-        {
-            "name": "title",
-            "baseName": "title",
-            "type": "string",
-            "format": ""
-        },
-        {
-            "name": "description",
-            "baseName": "description",
-            "type": "string",
-            "format": ""
-        },
-        {
-            "name": "body",
-            "baseName": "body",
-            "type": "string",
-            "format": ""
-        }    ];
-
-    static getAttributeTypeMap() {
-        return V1ExampleResponse.attributeTypeMap;
-    }
-
-    public constructor() {
-    }
-}
-
