# pkg/api/typescript/example/models/all.ts
@@ -1,4 +1,0 @@
-export * from '../models/ProtobufAny'
-export * from '../models/RpcStatus'
-export * from '../models/V1ExampleRequest'
-export * from '../models/V1ExampleResponse'
